--- a/supermarket-api/src/main/resources/application.yml
+++ b/supermarket-api/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
- port: 8081 
+ port: 8081
 spring:
+ application:
+  name: supermarket
  datasource:
   url: jdbc:h2:mem:supermarket
   driverClassName: org.h2.Driver
@@ -18,3 +20,6 @@ spring:
  mvc:
   pathmatch:
    matching-strategy: ANT_PATH_MATCHER
+#logging:
+# level:
+#  root: DEBUG
