--- a/supermarket-app/pubspec.yaml
+++ b/supermarket-app/pubspec.yaml
@@ -30,6 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.0.2
+  dio: ^5.0.1
+  #dio: ^4.0.6
+  provider: ^6.0.5
+  intl: ^0.18.0
+  loading_animation_widget: ^1.2.0+4
+  top_snackbar_flutter: ^3.0.0+1
+  bloc: ^8.1.1
+  flutter_bloc: ^8.1.2
+  equatable: ^2.0.5
+  match: ^0.4.1    
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,9 +50,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_dotenv: ^5.0.2
-  dio: ^5.0.1
-  #dio: ^4.0.6
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -49,6 +58,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+  match_generator: ^0.4.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
