Correção do DTO e outros detalhes

--- a/supermarket-api/src/main/resources/application.yml
+++ b/supermarket-api/src/main/resources/application.yml
@@ -4,7 +4,8 @@ spring:
  application:
   name: supermarket
  datasource:
-  url: jdbc:h2:mem:supermarket
+  #url: jdbc:h2:mem:supermarket
+  url: jdbc:h2:file:C:/Users/hdala/Documents/H2/supermarket
   driverClassName: org.h2.Driver
   username: sa
   password:
@@ -14,7 +15,8 @@ spring:
    path: /h2
  jpa:
   hibernate:
-   ddl-auto: create
+   #ddl-auto: create
+   ddl-auto: update
   show-sql: true
   database-platform: org.hibernate.dialect.H2Dialect
  mvc:
