--- a/supermarket-api/pom.xml
+++ b/supermarket-api/pom.xml
@@ -89,6 +89,21 @@
 		    <version>3.1.0</version>
 		    <scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.19.4</version>
+			<!--<version>3.16.0</version>-->
+		</dependency>
 	</dependencies>
 
 	<build>
